--- a/TODO
+++ b/TODO
@@ -7,3 +7,4 @@
 - liczba obstwionych punktów
 !!!11. Trzeba ustawić zmienną spot gracza, decydującą o miejscu w którym się znajduje, czyli pierwszy gracz
 	ma spot = 1, drugi spot = 2, kiedy pierwszy gracz wyjdzie z gry to trzeba zwolnić spot1, 3 gracz dołącza i wchodzi na spot = 1
+12. Jak gracz wyjdzie to usuwanie, jego elementów interfejsu
