--- a/TODO
+++ b/TODO
@@ -8,3 +8,4 @@
 !!!11. Trzeba ustawić zmienną spot gracza, decydującą o miejscu w którym się znajduje, czyli pierwszy gracz
 	ma spot = 1, drugi spot = 2, kiedy pierwszy gracz wyjdzie z gry to trzeba zwolnić spot1, 3 gracz dołącza i wchodzi na spot = 1
 12. Jak gracz wyjdzie to usuwanie, jego elementów interfejsu
+13. Karty po stronie klienta nie są usuwane - do naprawy
